--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -9,6 +9,8 @@
 
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  gap: 24px;
 
   align-items: center;
 
@@ -31,13 +33,26 @@
 #login * {
   width: 80%;
 }
-#signup input,
-#login input {
+#signup-inputs,
+#login-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+#signup-inputs input,
+#login-inputs input {
   border-radius: 12px;
-  border: solid;
+  border: solid 1px;
   height: 24px;
   background-color: white;
   color: black;
+}
+#signup-buttons,
+#login-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 input:placeholder-shown {
   padding: 0 20px;
