--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -19,7 +19,6 @@
   border-radius: 20px;
 
   width: 50vw;
-  height: 50svh;
 }
 
 #signup section,
@@ -45,6 +44,7 @@
   border-radius: 12px;
   border: solid 1px;
   height: 24px;
+  padding: 10px;
   background-color: white;
   color: black;
 }
@@ -53,7 +53,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-input:placeholder-shown {
-  padding: 0 20px;
 }
