--- a/src/Components/ConventionCard.css
+++ b/src/Components/ConventionCard.css
@@ -3,3 +3,9 @@
   width: 100%;
   background-color: rgb(54, 8, 65);
 }
+.convention-logo {
+  width: 250px;
+}
+.convention-logo img {
+  width: 100%;
+}
