--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 #root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100svh;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   box-sizing: border-box;
   height: 100svh;
