--- a/src/Components/ConventionCard.css
+++ b/src/Components/ConventionCard.css
@@ -1,9 +1,12 @@
 .convention-card {
+  display: flex;
+  flex-direction: column;
   padding: 18px;
-  width: 100%;
+  width: 60%;
   background-color: rgb(54, 8, 65);
 }
 .convention-logo {
+  align-self: center;
   width: 250px;
 }
 .convention-logo img {
