--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   width: 100vw;
   height: 100svh;
   margin: 0 auto;
