--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 #root {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  width: 100vw;
+  justify-content: space-between;
+  width: 100%;
   height: 100svh;
   margin: 0 auto;
   text-align: center;
