--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,9 @@ a:hover {
 }
 
 body {
-  margin: 0;
   display: flex;
   place-items: center;
+  width: 100vw;
   min-width: 320px;
   min-height: 100svh;
 }
