--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,12 +1,13 @@
 header {
-  top: 0;
-  position: absolute;
+  display: flex;
   padding: 12px;
   width: 100%;
-  display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  gap: 12px;
+}
+#header-home {
+  margin-right: auto;
 }
 header nav {
   display: flex;
