--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,2 +1,7 @@
 footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  background-color: rgba(50, 50, 50, 0.091);
 }
