--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -4,4 +4,13 @@ footer {
   align-items: center;
   height: 100px;
   background-color: rgba(50, 50, 50, 0.091);
+  gap: 48px;
+}
+#socials {
+  display: flex;
+  list-style: none;
+  gap: 12px;
+}
+#socials a {
+  color: black;
 }
