--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   overflow-x: hidden;
 }
 main {
-  height: 100%;
+  height: fit-content;
   width: 100%;
   display: flex;
   justify-content: center;
