--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,11 @@ main {
   justify-content: center;
   align-items: center;
 }
+#catchphrase {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 0.05rem;
+  font-size: 48px;
+  color: white;
+  filter: drop-shadow(4px 4px 4px #94949442);
+}
