--- a/src/Components/AddConvention.css
+++ b/src/Components/AddConvention.css
@@ -1,11 +1,14 @@
 #add-con {
-  background-color: rgb(21, 115, 125);
+  background-color: var(--secondary-bg-color);
   padding: 48px;
   border-radius: 12px;
   height: fit-content;
   width: 60%;
   max-width: 600px;
   min-width: 400px;
+}
+#add-con h2 {
+  color: white;
 }
 #add-con,
 #add-con-inputs {
@@ -19,7 +22,7 @@
 
   height: 48px;
   background-color: whitesmoke;
-  border: solid;
+  border: solid 1px;
   border-radius: 10px;
 }
 #add-con-inputs input[type="date"] {
@@ -40,6 +43,11 @@
   flex-direction: column;
   font-size: 1.5rem;
 }
+#date-select label {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
 .input-cont {
   padding: 6px;
   display: flex;
@@ -55,6 +63,18 @@
   align-items: center;
 }
 #buttons button {
+  background-color: var(--secondary-accent-color);
   width: 120px;
   height: 48px;
+  border: solid 1px;
+  transition: 0.2s;
+}
+#buttons button:hover {
+  transform: translate(1px, -1px) rotate(-1deg) scale(1.1);
+}
+#add-con-btn:hover {
+  background-color: green;
+}
+#clear-con-btn:hover {
+  background-color: red;
 }
