--- a/src/Components/AddConvention.css
+++ b/src/Components/AddConvention.css
@@ -11,7 +11,6 @@
 #add-con h2 {
   color: white;
 }
-
 #add-con,
 #add-con-inputs {
   gap: 12px;
@@ -42,9 +41,14 @@
   border-radius: 100%;
 }
 
-#add-con-inputs input:require::after {
+#add-con-inputs input {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+#add-con-inputs input:required::before {
+  color: red;
   content: "*";
-  right: 100px;
 }
 
 #date-select {
