--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -2,25 +2,28 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 48px 48px 0 48px;
+  padding: 48px;
   gap: 12px;
 }
 
 #convention-list {
-  background-color: rgba(171, 152, 255, 0.753);
-  margin: 0 auto;
+  background-color: var(--secondary-bg-color);
   width: 80%;
   height: fit-content;
   display: grid;
+  padding: 32px 0;
   gap: 48px;
   grid-template-rows: 300px;
-  grid-auto-rows: auto;
+  grid-auto-rows: 300px;
+  border-radius: 0 25px 0 0;
 }
 
 #convention-list-filter {
+  border-radius: 25px 0 0 0;
+  padding: 24px;
   display: flex;
   flex-direction: column;
   text-align: start;
-  background-color: rgba(171, 152, 255, 0.753);
+  background-color: var(--secondary-bg-color);
   width: 500px;
 }
