--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@
 }
 
 main {
-  height: fit-content;
+  min-height: fit-content;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
