--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: white;
+  text-decoration: none;
 }
 
 a:hover {
-  color: #535bf2;
+  color: #8e91ce;
 }
 
 body {
