--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -24,7 +24,12 @@
   display: flex;
   flex-direction: column;
   text-align: start;
-  background-color: var(--secondary-bg-color);
+  background: rgb(9, 8, 10);
+  background: linear-gradient(
+    0deg,
+    rgba(9, 8, 10, 1) 50%,
+    rgba(24, 7, 36, 1) 100%
+  );
   width: 500px;
 }
 #filter-title {
