--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -15,7 +15,7 @@
   gap: 48px;
   grid-template-rows: 300px;
   grid-auto-rows: 300px;
-  border-radius: 0 25px 0 0;
+  border-radius: 0 25px 25px 0;
 }
 
 #convention-list-filter {
