--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -1,5 +1,7 @@
 #convention-list-cont {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 48px;
