--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -1,7 +1,6 @@
 #convention-list-cont {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100%;
   height: 100%;
   padding: 48px;
@@ -66,4 +65,8 @@
 #filter-options {
   display: flex;
   flex-direction: column;
+}
+
+#no-cons-alert {
+  align-self: center;
 }
