--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -10,6 +10,7 @@
 #convention-list {
   background-color: var(--secondary-bg-color);
   width: 80%;
+  min-height: 100%;
   height: fit-content;
   display: grid;
   padding: 32px 0;
