--- a/src/Components/ConventionList.css
+++ b/src/Components/ConventionList.css
@@ -11,7 +11,7 @@
   background-color: var(--secondary-bg-color);
   width: 80%;
   min-height: 100%;
-  height: 100vh;
+  height: fit-content;
   display: grid;
   padding: 32px 0;
   gap: 48px;
