--- a/src/App.css
+++ b/src/App.css
@@ -19,15 +19,6 @@ main {
   padding: 48px;
 }
 
-#catchphrase {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  letter-spacing: 0.05rem;
-  font-size: 48px;
-  color: white;
-  filter: drop-shadow(4px 4px 4px #94949442);
-}
-
 #mascot {
   position: absolute;
   z-index: -1;
@@ -38,9 +29,21 @@ main {
 }
 
 #loading {
-  justify-self: center;
-  align-self: center;
-  display: flex;
-  justify-content: center;
+  margin: auto;
+}
+#catchphrase {
   align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  letter-spacing: 0.05rem;
+  font-size: 48px;
+  color: white;
+  filter: drop-shadow(4px 4px 4px #94949442);
+}
+#catchphrase-cont {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
 }
