--- a/src/Components/ViewCons.css
+++ b/src/Components/ViewCons.css
@@ -1,14 +1,26 @@
 #convention-list-cont {
   background-color: var(--secondary-bg-color);
-  width: 80%;
-  min-height: 100%;
-  height: fit-content;
+  width: 100%;
   display: grid;
+  padding: 32px 0;
+  border-radius: 0 25px 25px 0;
+}
+
+#convention-list {
+  list-style: none;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
   padding: 32px 0;
   gap: 48px;
   grid-template-rows: 300px;
   grid-auto-rows: 300px;
   border-radius: 0 25px 25px 0;
+}
+
+.convention-card {
+  height: 300px;
 }
 
 #convention-list-filter {
@@ -57,9 +69,4 @@
 #filter-options {
   display: flex;
   flex-direction: column;
-}
-
-#map {
-  width: 100%;
-  height: 215%;
 }
