--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 100%;
+
   height: 100svh;
+  width: 100%;
+
   margin: 0 auto;
   text-align: center;
-  box-sizing: border-box;
-  height: 100svh;
   overflow-x: hidden;
 }
 
 main {
-  height: 100svh;
   min-height: fit-content;
   width: 100%;
   display: flex;
@@ -44,6 +43,7 @@ main {
 }
 
 #catchphrase-cont {
+  margin: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
