--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ main {
   min-height: fit-content;
   width: 100%;
   display: flex;
+  justify-content: center;
   padding: 48px;
   gap: 12px;
 }
