--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,26 @@ a:hover {
   color: #8e91ce;
 }
 
+button {
+  width: 134px;
+  background-color: #171120;
+  border: solid 1px #e8a4ff;
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+.red-btn {
+  background-color: red;
+}
+.green-btn {
+  background-color: green;
+}
+
 body {
   display: flex;
   place-items: center;
@@ -45,18 +65,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
 }
 
 button:hover {
