--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ a:hover {
   color: #8e91ce;
 }
 
+ul {
+  list-style: none;
+  text-align: start;
+}
+
 button {
   width: 134px;
   background-color: #171120;
