--- a/src/styles/UserButton.css
+++ b/src/styles/UserButton.css
@@ -4,12 +4,26 @@
   flex-direction: column;
   align-content: start;
 }
+
 #user-menu {
   width: 300px;
   height: 400px;
-  background-color: rgb(187, 43, 43);
+  background-color: var(--secondary-bg-color);
+  border-radius: 0 0 0 20px;
 
   position: absolute;
   right: 12px;
   top: 12px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#close-menu {
+  align-self: flex-end;
+}
+
+#menu {
+  padding: 24px 0;
 }
