--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,16 @@ button {
   background-color: green;
 }
 
+input {
+  width: 100%;
+  height: 24px;
+  background-color: white;
+  border: solid white;
+  border-radius: 12px;
+  color: black;
+  padding: 0 12px;
+}
+
 body {
   display: flex;
   place-items: center;
