--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -21,12 +21,11 @@ form {
 #add-login {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-}
+  padding: 0 20px;
 
-#add-names input,
-#add-login input {
-  width: 50%;
+  border: solid yellow 1px;
 }
 
 #organizer-details {
