--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -48,9 +48,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 20px;
-
-  border: solid yellow 1px;
+  gap: 24px;
 }
 
 #organizer-details {
@@ -63,4 +61,8 @@ form {
 
 #organizer-details button {
   width: 200px;
+}
+
+.error {
+  border: solid 2px yellow;
 }
