--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,15 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.nav-button {
+  font-size: 28px;
+  border: none;
+  background: rgba(0, 0, 0, 0);
+  width: fit-content;
+  padding: 0;
+  text-align: center;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
