--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 main {
   min-height: fit-content;
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   padding: 48px;
