--- a/src/styles/UserButton.css
+++ b/src/styles/UserButton.css
@@ -2,6 +2,8 @@
   aspect-ratio: 1;
   width: 30px;
   border-radius: 50%;
+  border: solid 2px;
+  background-color: rebeccapurple;
 }
 
 #userbutton {
