--- a/src/styles/ViewConInfo.css
+++ b/src/styles/ViewConInfo.css
@@ -1,11 +1,19 @@
 #convention-info {
   display: flex;
   flex-direction: column;
+
   width: 100%;
   height: 100%;
 }
+
+#convention-info hr {
+  place-self: center;
+  margin: 12px 0;
+  width: 50%;
+}
+
 #convention-info-heading {
-  border: solid 1px white;
+  /* border: solid 1px white; */
   height: 50px;
   display: flex;
 }
@@ -16,7 +24,7 @@
 #convention-info-main section {
   display: flex;
   flex-direction: column;
-  border: solid 1px blue;
+  /* border: solid 1px blue; */
   width: 100%;
 }
 
@@ -29,10 +37,31 @@
   height: 100%;
 }
 #convention-options {
+  padding: 48px;
   align-items: start;
 }
 
 .leaflet-container {
   height: 100%;
   width: 100%;
+}
+
+#convention-general {
+  padding: 24px 100px;
+}
+
+#convention-details {
+  display: flex;
+}
+
+#convention-details p {
+  text-align: start;
+}
+
+#convention-details ul li {
+  text-align: center;
+}
+
+#convention-details #submitter {
+  text-align: center;
 }
