--- a/src/index.css
+++ b/src/index.css
@@ -55,8 +55,13 @@ button {
 .red-btn {
   background-color: red;
 }
+
 .green-btn {
   background-color: green;
+}
+
+.orange-btn {
+  background-color: orange;
 }
 
 label {
