--- a/src/styles/Forms.css
+++ b/src/styles/Forms.css
@@ -66,3 +66,18 @@ form {
 .error {
   border: solid 2px yellow;
 }
+
+input.picker[type="date"] {
+  position: relative;
+}
+
+input.picker[type="date"]::-webkit-calendar-picker-indicator {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  color: transparent;
+  background: transparent;
+}
