--- a/src/styles/ViewCons.css
+++ b/src/styles/ViewCons.css
@@ -66,7 +66,14 @@
   letter-spacing: 0.5rem;
   text-align: center;
 }
+
 #filter-options {
   display: flex;
   flex-direction: column;
+}
+
+#filter-buttons {
+  display: flex;
+  padding: 24px 0;
+  gap: 12px;
 }
