--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,8 @@
 }
 
 main {
-  min-height: fit-content;
   width: 100%;
-  height: 100%;
+  height: fit-content;
   display: flex;
   justify-content: center;
   padding: 48px;
