Hide wip alert on mobile

--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -4,7 +4,8 @@
 @media only screen and (max-width: 900px) {
   header,
   footer,
-  #catchphrase-cont {
+  #catchphrase-cont,
+  #wipAlert {
     display: none;
   }
 
