--- a/src/index.css
+++ b/src/index.css
@@ -145,10 +145,25 @@ button:focus-visible {
 }
 
 #wipAlert {
+  position: absolute;
+  width: 100vw;
+  height: 100svh;
+  z-index: 999;
   text-align: start;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20%;
+  overflow: none;
 }
 #wipAlert button {
   margin: 24px 0;
+}
+#wipAlert img {
+  align-self: center;
+  width: 30%;
+  aspect-ratio: 1;
 }
 
 #loading {
