--- a/src/index.css
+++ b/src/index.css
@@ -86,12 +86,16 @@ textarea {
 }
 
 .input-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
   text-align: start;
 }
 
+.input-container button {
+  width: 100%;
+}
 body {
   display: flex;
   place-items: center;
