--- a/src/index.css
+++ b/src/index.css
@@ -91,11 +91,29 @@ textarea {
   flex-direction: column;
   justify-content: start;
   text-align: start;
+  gap: 12px;
+}
+
+.input-container-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  gap: 4px;
+}
+
+.input-container-row button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10px;
 }
 
 .input-container button {
   width: 100%;
 }
+
 body {
   display: flex;
   place-items: center;
