--- a/src/styles/ViewCons.css
+++ b/src/styles/ViewCons.css
@@ -41,15 +41,13 @@
   width: 500px;
 }
 .filter-option-input input {
-  color: black;
-  width: 400px;
-  height: 32px;
-  background-color: #fff;
+  color: white;
+
+  background-color: #220331;
   border-radius: 3px;
   border: solid;
   display: flex;
   flex-direction: column;
-  font-size: 1rem;
   gap: 10px;
 }
 
