--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root {
   --main-bg-color: #09080a;
   --main-accent-color: #161020;
+  --main-border-color: #ff005e;
+
   --secondary-bg-color: #180724;
   --secondary-accent-color: #0d081b;
 
@@ -92,6 +94,7 @@ textarea {
   justify-content: start;
   text-align: start;
   gap: 12px;
+  padding: 24px;
 }
 
 .input-container-row {
