--- a/src/styles/VirtualizedList.css
+++ b/src/styles/VirtualizedList.css
@@ -1,14 +1,123 @@
-.list-item {
+.border {
+  position: relative;
+  border-top: solid 1px var(--main-border-color);
   display: flex;
-      padding: "24px",
+  justify-content: start;
+  align-items: center;
+  width: 97% !important;
+
+  padding: 12px;
+  transition: 0.1s;
+  border-left: transparent solid 1px;
+  border-right: transparent solid 1px;
+}
+
+.list-item {
+  position: relative;
+  display: flex;
+  overflow: hidden;
   justify-content: space-between;
-  /* background-color: blue; */
+  height: 100px !important;
+  align-items: center;
+}
+
+.border:first-child {
+  border-top: solid 1px transparent;
+}
+
+.border:first-child:hover {
+  border-top: solid 1px var(--main-border-color);
+}
+
+.border:hover {
+  box-shadow: inset 0px 0px 9px 0px #ff005d8e;
+  border-left: solid 2px white;
+  border-right: solid 2px white;
 }
 
 .list-item-text {
+  width: fit-content;
+}
+
+.list-item-text p {
+  text-wrap: nowrap;
   text-align: start;
-  justify-self: start;
-  width: 70%;
-  max-width: 70%;
-  
+}
+
+#list .border:nth-last-child(2) {
+  border-bottom: solid 1px transparent;
+}
+
+#list .border:nth-last-child(2):hover {
+  border-bottom: solid 1px var(--main-border-color);
+}
+
+.overflowing:hover .list-item-text {
+  animation: slideText 4s infinite linear;
+}
+
+@keyframes slideText {
+  to {
+    transform: translateX(-110%);
+  }
+}
+
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ff0000;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #f70000;
+  border-radius: 10px;
+  border: 2px solid #f0f0f0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #f0f0f0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+/* ====== FIREFOX SCROLLBAR ====== */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f0f0f0;
+}
+
+@media (prefers-color-scheme: dark) {
+  ::-webkit-scrollbar-track {
+    background: #222;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border: 2px solid #222;
+  }
+  * {
+    scrollbar-color: #555 #222;
+  }
 }
