--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ textarea {
   justify-content: start;
   text-align: start;
   gap: 12px;
-  padding: 12px;
+  /* padding: 12px; */
 }
 
 .input-container-row {
