--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,10 @@ button {
 
 .red-btn {
   background-color: red;
+  border-color: black;
+}
+.red-btn:disabled {
+  background-color: rgba(255, 0, 0, 0.425);
 }
 
 .green-btn {
