--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -4,3 +4,29 @@
   gap: 24px;
   padding: 12px 0;
 }
+
+#convention-list-filter .tag-container {
+  position: relative;
+  padding: 12px;
+}
+
+#convention-list-filter .tag-container #construction-sign {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  width: 100%;
+  height: 100%;
+  background-origin: content-box;
+  background: url("sign.webp") no-repeat;
+  background-color: rgba(0, 0, 0, 0.438);
+  background-position: center;
+  background-size: 40%;
+
+  border: 2px solid yellow;
+  outline: 2px solid yellow;
+  box-shadow: 0 0 0 3px black;
+  outline-offset: 3px;
+  border-radius: 7px;
+}
