--- a/src/styles/Filter.css
+++ b/src/styles/Filter.css
@@ -19,7 +19,7 @@
   width: 100%;
   height: 100%;
   background-origin: content-box;
-  background: url("sign.webp") no-repeat;
+  background: url("/sign.webp") no-repeat;
   background-color: rgba(0, 0, 0, 0.438);
   background-position: center;
   background-size: 40%;
