Fix rendering issue on menu close

--- a/src/styles/UserButton.css
+++ b/src/styles/UserButton.css
@@ -38,8 +38,9 @@
 }
 
 #close-menu:active#close-menu:focus {
-  display: none;
+  outline: none;
 }
+
 #close-menu {
   align-self: flex-end;
   background: none;
