--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: 0.25s;
 }
 
 .red-btn {
