--- a/src/index.css
+++ b/src/index.css
@@ -111,7 +111,7 @@ label {
 
 input,
 textarea {
-  width: 200px;
+  width: 100%;
   height: 24px;
   background-color: white;
   border: solid white;
