--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --main-bg-color: #00000069;
-  --main-accent-color: #fc6c844b;
+  --main-bg-color: #020202;
+  --main-accent-color: #0a000a;
   --main-border-color: #ffffff83;
   --main-hover-color: rgb(119, 10, 75);
   --main-checked-color: rgb(119, 10, 75);
