--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -16,7 +16,8 @@ header {
   padding: 16px;
   height: 70px;
   border-left: rgba(237, 238, 240, 0.808) 3px solid;
-  width: 10%;
+  min-width: 150px;
+  width: fit-content;
   border-radius: 100px;
 }
 
